<resources>
    <string name="app_name">ShackleHotelBuddy</string>
    <string name="error_connection">Unable to fetch data, please check your internet connection and try again.</string>
    <string name="error_service">API service is not responding at the moment, please try again later.</string>
    <string name="error_unknown">Unknown error occurred.</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="adult_hint">0</string>
    <string name="no_data">No data found</string>
    <string name="search_result">Search results</string>
    <string name="children">Children</string>
    <string name="adults">Adults</string>
    <string name="check_out_date">Check-out date</string>
    <string name="check_in_date">Check-in date</string>
    <string name="select_guests_date_and_time">Select guests,\ndate and time</string>
    <string name="content_desc_checkedoutimage">checkedOutImage</string>
    <string name="content_desc_checkedinimage">checkedInImage</string>
    <string name="content_desc_adultsimage">adultsImage</string>
    <string name="content_desc_childrenimage">childrenImage</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="please_enter_valid_information">Please enter valid information</string>
    <string name="search">Search</string>
    <string name="searchinimage">searchInImage</string>
    <string name="content_desc_star">star</string>
</resources>